--- a/RepoAnalyzer.csproj
+++ b/RepoAnalyzer.csproj
@@ -8,10 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.AI.OpenAI" Version="2.1.0" />
     <PackageReference Include="Azure.Identity" Version="1.13.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Octokit" Version="14.0.0" />
-    <PackageReference Include="OpenAI" Version="2.1.0" />
     <PackageReference Include="System.Net.Http.Json" Version="9.0.1" />
     <PackageReference Include="YamlDotNet" Version="16.3.0" />
   </ItemGroup>
